# Gendiff

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  cli.py  formatter.py  generate_diff_engine.py  get_diff_engine.py  parse.py
gendiff/formatters/: plain.py  stylish.py  to_json.py
gendiff/scripts/: gendiff.py  parse.py
tests/: test_gendiff.py
tests/fixtures/: diff5.txt
